--- a/refs.bib
+++ b/refs.bib
@@ -1045,7 +1045,17 @@ archivePrefix = "arXiv",
  acmid = {1855756},
  publisher = {USENIX Association},
  address = {Berkeley, CA, USA},
-} 
+}
+
+@inproceedings{delite,
+  author={Koeplinger, David and Prabhakar, Raghu and Zhang, Yaqi and Delimitrou, Christina and Kozyrakis, Christos and Olukotun, Kunle},
+  booktitle={2016 ACM/IEEE 43rd Annual International Symposium on Computer Architecture (ISCA)}, 
+  title={Automatic Generation of Efficient Accelerators for Reconfigurable Hardware}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={115-127},
+  doi={10.1109/ISCA.2016.20}} 
 
 @inproceedings{pex,
  author = {Tillmann, Nikolai and De Halleux, Jonathan},
@@ -10477,4 +10487,15 @@ series = {ASPLOS '17}
   booktitle={Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
   pages={851--866},
   year={2021}
+}
+
+@article{id,
+  title={The parallel programming language Id and its compilation for parallel machines},
+  author={Nikhil, Rishiyur S},
+  journal={International Journal of High Speed Computing},
+  volume={5},
+  number={02},
+  pages={171--223},
+  year={1993},
+  publisher={World Scientific}
 }
