added background figure

--- a/2_background.tex
+++ b/2_background.tex
@@ -463,8 +463,10 @@ This thesis focuses on {\em architecture} that minimizes energy and maintains fl
 %
 In fact, \autoref{chapter:snafu} describes \snafu, which has a goal of letting designers generate ULP CGRAs at reduced VLSI effort.
 
+\figPower
+% \tabMotivate
 \subsection{Summary}
-\autoref{fig:background:power} and \autoref{tab:background} summarize different CGRA designs and also highlight what makes the ULP sensor domain different.
+\autoref{fig:power} and \autoref{tab:motivation} summarize different CGRA designs and also highlight what makes the ULP sensor domain different.
 % 
 Specifically, most prior CGRAs target much higher power domains ($\approx$100\,mW~\cite{weng2020dsagen,karunaratne2017hycube,nowatzki:isca17:stream-dataflow,tan2018stitch,weng2020hybrid} or even up to 100\,W~\cite{plasticine,voitsechov2014single}),
 and their design decisions do not translate well to the ULP domain.
