added comparison table

--- a/2_background.tex
+++ b/2_background.tex
@@ -464,7 +464,7 @@ This thesis focuses on {\em architecture} that minimizes energy and maintains fl
 In fact, \autoref{chapter:snafu} describes \snafu, which has a goal of letting designers generate ULP CGRAs at reduced VLSI effort.
 
 \figPower
-% \tabMotivate
+\tabMotivate
 \subsection{Summary}
 \autoref{fig:power} and \autoref{tab:motivation} summarize different CGRA designs and also highlight what makes the ULP sensor domain different.
 % 
